syntax = "proto3";

package raft;

option go_package = "/raft";

message LogEntry {
  int64 term = 1;
  string command = 2;
}

message VoteRequest {
  int64 term = 1;
  string candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message VoteResponse {
  int64 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  int64 term = 1;
  string leader_id = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int64 leader_commit = 6;
}

message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
}

service RaftService {
  rpc RequestVote (VoteRequest) returns (VoteResponse);

  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}